# gcm-ai

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/configs/: completion.rs
src/types/: arg_parser.rs  completion.rs  configs.rs  git.rs  mod.rs  openai.rs
