[package]
name = "gcm-ai"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "GCM-AI is a command-line tool that generates commit messages based on the diff of staged changes using OpenAI."
categories = ["command-line-utilities"]
repository = "https://github.com/OLoKo64/gcm-ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
confy = "0.5.1"
once_cell = "1.17.1"
owo-colors = { version = "3.5.0" }
reqwest = { version = "0.11.16", features = ["json"] }
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt", "process"] }
